css/style.css
/* font settings */
h1 {
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 600;
    font-size: 48px;
    letter-spacing: 0.05em;
    text-transform: capitalize;
}

h2 {
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 600;
    font-size: 36px;
    letter-spacing: 0.05em;
    text-transform: capitalize;
}

h3 {
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 600;
    font-size: 30px;
    letter-spacing: 0.05em;
    text-transform: capitalize;
}

h4 {
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    letter-spacing: 0.05em;
    text-transform: capitalize;
}

p {
    font-family: 'Albert Sans';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 150%;
}

@media only screen and (max-width: 768px){
    h1 {
        font-size: 30px;
    }
    
    h2 {
        font-size: 24px;
    }

    h3 {
        font-size: 18px;
    }
    
    p {
        font-size: 16px;
    }
}

/* button settings */
.buttonA {
    padding: 24px 68px;
    height: 68px;
    background-color: #2A4F4C;
    border: none;
    color: white;
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 600;
    font-size: 17px;
    text-align: center;
    line-height: 1.0;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    white-space: nowrap;
    min-width: max-content
}

.buttonA:hover{
    background-color: #86A9A3;
    box-shadow: 2px 5px 0px rgba(0, 0, 0, 0.2);
    transform: translateY(-5px);
}

.buttonB {
    padding: 24px 68px;
    height: 68px;
    background-color: white;
    border: 5px solid #2A4F4C;
    color: #2A4F4C;
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 600;
    font-size: 17px;
    text-align: center;
    line-height: 0.8;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    white-space: nowrap;
    min-width: max-content
}

.buttonB:hover{
    background-color: #86A9A3;
    color: white;
    box-shadow: 2px 5px 0px rgba(0, 0, 0, 0.2);
    transform: translateY(-5px);
}

@media only screen and (max-width: 768px)
{
    .buttonA {
        padding: 21px 48px;
        height: 60px;
        font-size: 15px;
        white-space: nowrap;
        min-width: max-content
    }
    
    .buttonB {
        padding: 21px 48px;
        height: 60px;
        font-size: 15px;
        white-space: nowrap;
        min-width: max-content
    }
}

/* header nav section*/
/* /* nav {
    width: 100%;
    padding-top: 24px;
    padding-bottom: 24px;
}

.headerNav {
    padding-left: 5%;
    list-style-type: none;
    display: flex;
    flex-direction: row; 
    justify-content: space-between;
    width: 300px;
    align-items: center;
    font-family: 'Albert Sans';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    color: #161616;
} */

.navLogo {
    width: 42px;
    text-align: center;
    animation: spin 5s;
    transform-origin: center center;
    padding-top: 0;
    padding-bottom: 0;
}

@keyframes spin {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(360deg)
    }
}

/* /* .navItem {
    padding-right: 24px;
} */

a {
    text-decoration: none;
    color: inherit;
}

/* Add a black background color to the top navigation */
.topnav {
    /* background-color: #333; */
    overflow: hidden;
    font-family: 'Albert Sans';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    padding: 24px 5% 24px 5%;
  }

  /* Style the links inside the navigation bar */
  .topnav a {
    float: left;
    display: block;
    color: #161616;
    text-align: center;
    padding-right: 48px;
    text-decoration: none;
    line-height: 42px;
  }


  /* Change the color of links on hover */
  .topnav a:hover {
    /* background-color: #ddd; */
    color: #86A9A3;
  }
  
  /* Add an active class to highlight the current page */
  .topnav a.active {
    color: #86A9A3;
  }

  /* Hide the link that should open and close the topnav on small screens */
  .topnav .icon {
    display: none;
  }

/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 768px) {
    .topnav a:not(:first-child) {display: none;}
    .topnav a.icon {
      float: right;
      display: block;
      font-size: 32px;
      color: #2A4F4C;
    }
  }
  
  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
  @media screen and (max-width: 768px) {
    .topnav.responsive {position: relative;}
    .topnav.responsive a.icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    .topnav.responsive a {
      float: none;
      display: block;
      text-align: left;
    }
  }


/* hero section */
.hero {
    padding-top: 2%;
    padding-bottom: 20%;
    padding-left: 5%;
}

.heroText {
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 600;
    font-size: 96px;
    line-height: 115px;
    letter-spacing: 0.05em;
}

.heroTagline {
    font-family: 'Figtree';
    font-style: normal;
    font-weight: 400;
    font-size: 30px;
    line-height: 36px;
    letter-spacing: 0.05em;
    text-transform: capitalize;
    margin-top: -68px;
}


/* self introduction section */
.selfIntroduction {
    background-color: #E8D7C8;
    padding: 10%;
    text-align: center;
}


.greeting {
    font-size: 1.2em;
}

.mini-kawaDiscription {
    font-size: 0.8em;
}
/* ... */

